test_scores/negative_dimers/features/P38606.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/P38606.pkl.xz